docs: delete opening
